--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-matplotlib==3.4.3
-numpy==2.0.0
-pandas==1.2.2
+matplotlib==3.8.0  # Latest compatible version with numpy>=1.19.3
+numpy==1.21.5
+pandas==1.3.5      # Latest compatible version with numpy>=1.19.3
 Pillow==9.0.1
 streamlit==1.30.0
 torch==2.1.2
