--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-matplotlib==3.8.0  # Latest compatible version with numpy>=1.19.3
+matplotlib==3.8.4
 numpy==1.21.5
-pandas==1.3.5      # Latest compatible version with numpy>=1.19.3
+pandas==2.2.2
 Pillow==9.0.1
+Pillow==10.3.0
 streamlit==1.30.0
 torch==2.1.2
 torchvision==0.16.2
